--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
         Please let us know how we did with your support request. All feedback is
         appreciated to help us improve our offering.
       </p>
-      <button class="btn">1</button>
-      <button class="btn">2</button>
-      <button class="btn">3</button>
-      <button class="btn">4</button>
-      <button class="btn">5</button>
-      <button type="submit">Submit</button>
+      <div class="btn-rating-container">
+        <button class="rating-btn">1</button>
+        <button class="rating-btn">2</button>
+        <button class="rating-btn">3</button>
+        <button class="rating-btn">4</button>
+        <button class="rating-btn">5</button>
+      </div>
+      <button type="submit" class="submit-btn">Submit</button>
     </div>
     <div class="attribution">
       Challenge by
