--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h1>How did we do?</h1>
       <p>
         Please let us know how we did with your support request. All feedback is
-        appreciated to help us improve our offering.
+        appreciated to help us improve our offering!
       </p>
       <div class="btn-rating-container">
         <button class="rating-btn">1</button>
@@ -32,7 +32,7 @@
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
+        >Frontend Mentor.</a
       >. Coded by <a href="https://www.github.com/FriedAxons">Bryan Suarez</a>.
     </div>
   </body>
