--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
         >Frontend Mentor.</a
       >. Coded by <a href="https://www.github.com/FriedAxons">Bryan Suarez</a>.
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
