Work started on thank you container

--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
       </div>
       <button type="submit" class="submit-btn">Submit</button>
     </div>
+    <div class="thank-you-container">
+      <img
+        src="./images/illustration-thank-you.svg"
+        alt="thank you illustration"
+      />
+      <p>You selected 4 out of 5</p>
+      <h1>Thank you!</h1>
+      <p>
+        We appreciate you taking the time to give a rating. If you ever need
+        more support, don't hesitate to get in touch!
+      </p>
+    </div>
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
