Add more styles to thank you container
More styles added to the thank you container in the CSS file.
Mostly fitting the image properly in its container. Removed the image
tag for the illustration, and instead put the image in a div
and inserted it using the background-image property. This made an issue
with fitting the image in its container properly, much simpler.

--- a/index.html
+++ b/index.html
@@ -30,10 +30,7 @@
       <button type="submit" class="submit-btn">Submit</button>
     </div>
     <div class="thank-you-container">
-      <img
-        src="./images/illustration-thank-you.svg"
-        alt="thank you illustration"
-      />
+      <div class="image"></div>
       <p>You selected 4 out of 5</p>
       <h1>Thank you!</h1>
       <p>
