--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <button type="submit" class="submit-btn">Submit</button>
     </div>
     <div class="thank-you-container">
-      <div class="image"></div>
+      <div class="thank-you-image"></div>
       <p class="selected-rating">You selected 4 out of 5</p>
       <h1>Thank you!</h1>
       <p>
