Adding hover effects to rating buttons

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
       <button type="submit" class="submit-btn">Submit</button>
     </div>
-    <div class="thank-you-container">
+    <div class="thank-you-container active">
       <div class="thank-you-image"></div>
       <p class="selected-rating">You selected 4 out of 5</p>
       <h1>Thank you!</h1>
