--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
     <div class="thank-you-container active">
       <div class="thank-you-image"></div>
-      <p class="selected-rating">You selected 4 out of 5</p>
+      <p class="selected-rating"></p>
       <h1>Thank you!</h1>
       <p>
         We appreciate you taking the time to give a rating. If you ever need
